extra_DIST = README 
bin_PROGRAMS = example ortho example-zoompan-animate
example_SOURCES = example.cpp
example_LDADD = libdslab.a
ortho_SOURCES = example-ortho.cpp
ortho_LDADD = libdslab.a
example_zoompan_animate_SOURCES = example-zoompan-animate.cpp
example_zoompan_animate_LDADD = libdslab.a

lib_LIBRARIES = libdslab.a
libdslab_a_SOURCES = dslab.cpp guicon.cpp xpm_mdsg.cpp xpm_viewmag1.cpp  xpm_viewmagp.cpp  xpm_viewmagm.cpp

include_HEADERS = dslab.h guicon.h
